Fix h3 color contrast

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ h3 {
 
 .personal-portfolio-header,
 .professional-portfolio-header {
-	color: #219ebc;
+	color: #023047;
     font-weight: 600;
 }
 
